WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41448
HTMLTokenizer should ASSERT that it never emits a null character
https://bugs.webkit.org/show_bug.cgi?id=41448
Summary
HTMLTokenizer should ASSERT that it never emits a null character
Eric Seidel (no email)
Reported
2010-07-01 01:11:55 PDT
HTMLTokenizer should ASSERT that it never emits a null character
Attachments
Patch
(3.26 KB, patch)
2010-07-01 01:14 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-07-01 01:13:09 PDT
These ASSERTs would have prevented the problems seen in
bug 41436
(which were fixed by
bug 41439
).
Eric Seidel (no email)
Comment 2
2010-07-01 01:14:59 PDT
Created
attachment 60214
[details]
Patch
Alexey Proskuryakov
Comment 3
2010-07-01 12:10:51 PDT
I still think it's a bad bad idea in HTML5 to replace nulls with FFFD's.
Eric Seidel (no email)
Comment 4
2010-07-01 13:33:59 PDT
The ASSERTs here are mostly to guard against us ever emitting \0 which we've repurposed to mean EndOfFile. You should definitely take your complaints up with Hixie. If we do allow emitting \0 at some point then we'll need to use a different character to mean EOF. Also, one side-effect of allowing \0 in the rendered content is that diff treats files with \0 in them as binary (which bit us in
bug 41436
).
Adam Barth
Comment 5
2010-07-01 19:58:18 PDT
Comment on
attachment 60214
[details]
Patch @ap: I don't mean to ignore your comments. I certainly find them valuable, but that's an spec-level issue, not something that should block us ASSERTing that the implementation is doing what we intend it to do at the moment.
WebKit Commit Bot
Comment 6
2010-07-01 20:15:41 PDT
Comment on
attachment 60214
[details]
Patch Clearing flags on attachment: 60214 Committed
r62352
: <
http://trac.webkit.org/changeset/62352
>
WebKit Commit Bot
Comment 7
2010-07-01 20:15:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug